Refactor Overlay Handling

Now all overlays icons in kitemviews are added in
KStandardItemListWidget::updatePixmapCache.

data[iconOverlays] now contains icon names.

DolphinFileItemListWidget::refreshCache is the sole responsible of
setting the overlays either coming from KFileItemModelRolesUpdater or
KVersionControlPlugin.

This garantees consistency in rendering.

BUG: 497372